--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav class = "navbar">
       <a href = "index.html" class = "nav-logo">Nat Baker</a>
       <ul>
-<!--         <li><a href = "./index.html">Home</a></li>
-        <li><a href = "./bio.html">Bio</a></li>
-        <li><a href = "./services.html">Services</a></li>
+<!--         <li><a href = "./index.html">Home</a></li> -->
+        <li><a href = "./updates.html">Updates</a></li>
+<!--         <li><a href = "./services.html">Services</a></li>
         <li><a href = "./contact.html">Contact</a></li> -->
       </ul>
     </nav>
