--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p><a href="https://theressamalone.wixsite.com/millymagazine/firework">Firework</a>milly magazine</p><br>
         <p><a href="https://www.takahe.org.nz/product/takahe-103/">Last Bird Island</a>takahe [issue 103]</p><br>
         <p><a href="https://paperroadpress.co.nz/product/yb04/">Last Bird Island</a>Year’s Best Aotearoa NZ Science Fiction &amp; Fantasy [vol 4]</p><br>
-        <p><a href="http://turbinekapohau.org.nz/2022-contents-fiction-nat-baker/">A Good Daughter</a>Turbine | Kapohau [2022 issue]</p><br>
+        <p><a href="https://turbinekapohau.org.nz/archive-issues/2022-contents/fiction-nat-baker/">A Good Daughter</a>Turbine | Kapohau [2022 issue]</p><br>
          
     <h3>Book Reviews</h3>
     
